--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       "You’re like the secret ingredient that makes everything better.",
       "You’re living proof that unicorns exist.",
       "You’re the sparkle in glitter’s eye.",
-      "You’re like the favorite character in every book—irresistibly lovable."
+      "You’re like the favorite character in every book—irresistibly lovable.",
       "You have the best sense of humor!",
       "You're incredibly talented!",
     ];
@@ -94,7 +94,7 @@
       "You’re the human equivalent of a lukewarm cup of coffee.",
       "You’re like glitter after crafting—hard to get rid of and everywhere you shouldn’t be.",
       "You have the accuracy of a drunk dart player.",
-      "You’re the plot hole in an otherwise perfect story."
+      "You’re the plot hole in an otherwise perfect story.",
       "Your secrets are always safe with me. I never even listen when you tell me them.",
       "You have the perfect face for radio!",
     ];
