--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       "You’re the sparkle in glitter’s eye.",
       "You’re like the favorite character in every book—irresistibly lovable.",
       "You have the best sense of humor!",
-      "You're incredibly talented!",
+      "You're incredibly talented!"
     ];
 
     // Array of insults
@@ -96,7 +96,7 @@
       "You have the accuracy of a drunk dart player.",
       "You’re the plot hole in an otherwise perfect story.",
       "Your secrets are always safe with me. I never even listen when you tell me them.",
-      "You have the perfect face for radio!",
+      "You have the perfect face for radio!"
     ];
 
     // Function to get a random compliment
@@ -113,4 +113,3 @@
   </script>
 </body>
 </html>
-
