--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <p>Come here for random compliments and insults.</p>
 
   <!-- Button for Compliment -->
-  <button onclick="getCompliment()">Get Compliment</button>
+ <button class="fancy-button" onclick="getCompliment()">Get a Kiss 💋</button>
 
   <!-- Button for Insult -->
-  <button onclick="getInsult()">Get Insult</button>
+ <button class="fancy-button" onclick="getInsult()">Get a Diss 🔥</button>
 
   <h2 id="response"></h2>
 
