--- a/index.html
+++ b/index.html
@@ -23,6 +23,53 @@
       cursor: pointer;
     }
   </style>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kisses & Disses</title>
+    <!-- CSS inside the <style> tag -->
+    <style>
+        /* Style for the body */
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Style for the header (h1) */
+        h1 {
+            color: #ff69b4;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        /* Style for the button */
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            display: block;
+            margin: 20px auto;
+            font-size: 16px;
+        }
+
+        /* Button hover effect */
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to Kisses & Disses!</h1>
+    <button>Generate Compliment</button>
+</body>
+</html>
+
 </head>
 <body>
   <h1>Welcome to Kisses & Disses!</h1>
