--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #ff1493;
+            background-color: #5FA8D3;
             color: white;
             border: none;
             border-radius: 5px;
