--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph Meta Tags for social sharing -->
     <meta property="og:title" content="Random Compliment and Insult Generator | Fun Compliments & Sassy Insults">
     <meta property="og:description" content="Get random compliments or sassy insults with our fun and interactive generator. Brighten your day with a compliment or a funny diss. Try it now!">
-    <meta property="og:image" content="link_to_image.jpg"> <!-- Replace with your image link -->
+    <meta property="og:image" content="https://imgur.com/a/OKfJnkw> <!-- Replace with your image link -->
     <meta property="og:url" content="https://yourwebsite.com">
 
     <meta name="keywords" content="random compliments, random insults, compliment generator, insult generator, fun compliments, funny insults, compliment generator online, random compliment tool, funny compliment generator">
