--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 <body>
-    <img src="https://i.imgur.com/OKfJnkw.jpg" alt="Kisses and Disses" style="width:100%; height:auto;">
+    <img src="https://imgur.com/a/OKfJnkw" alt="Kisses and Disses" style="width:100%; height:auto;">
 
     <!-- Main Header (H1 for SEO) -->
     <h1>Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
