--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
     </style>
 </head>
 <body>
-    <img src="https://imgur.com/t9lzFLh.png" alt="Kisses and Disses" style="width:100%; height:auto;">
+<img src="https://imgur.com/t9lzFLh.png" alt="Kisses and Disses" style="width:100%; height:auto; margin-top: 0; padding-top: 0;">
 
-    <!-- Main Header (H1 for SEO) -->
-    <h1>Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
-    
-    <!-- Description (SEO-friendly text with keywords) -->
-    <p>Come here for random compliments and insults that will make you smile or laugh out loud! Our compliment and insult generator brings fun and joy to your day.</p>
+<!-- Main Header (H1 for SEO) -->
+<h1 style="margin-top: 10px;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
 
-    <!-- Call-to-Action: Compliment Button -->
-    <button onclick="getCompliment()">Get a Kiss 💋</button>
+<!-- Description (SEO-friendly text with keywords) -->
+<p style="margin-top: 10px;">Come here for random compliments and insults that will make you smile or laugh out loud! Our compliment and insult generator brings fun and joy to your day.</p>
 
-    <!-- Call-to-Action: Insult Button -->
-    <button onclick="getInsult()">Get a Diss 🔥</button>
+<!-- Call-to-Action: Compliment Button -->
+<button onclick="getCompliment()" style="margin-top: 10px;">Get a Kiss 💋</button>
 
-    <!-- Section for displaying the response -->
-    <h2 id="response"></h2>
+<!-- Call-to-Action: Insult Button -->
+<button onclick="getInsult()" style="margin-top: 10px;">Get a Diss 🔥</button>
 
-    <!-- Example Image with Alt Text for SEO -->
-    <img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun text" />
+<!-- Section for displaying the response -->
+<h2 id="response" style="margin-top: 20px;"></h2>
+
+<!-- Example Image with Alt Text for SEO -->
+<img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; height:auto;">
 
   <script>
     // Array of compliments
