--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 <body>
-<img src="https://imgur.com/t9lzFLh.png" alt="Kisses and Disses" style="max-width:100%; height:auto;">
+<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="max-width:100%; height:auto;">
 
 <!-- Main Header (H1 for SEO) -->
 <h1 style="margin-top: 10px;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
