--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 <body>
-<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="width:100%; height:auto; padding-bottom: 20px; margin-top: 10px;">
+<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="max-width: 100%; height: auto; padding-bottom: 20px; margin-top: 10px;">
 
 <!-- Main Header (H1 for SEO) -->
 <h1 style="margin-top: 10px;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
@@ -74,6 +74,7 @@
 
 <!-- Example Image with Alt Text for SEO -->
 <img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; height:auto;">
+
 
   <script>
     // Array of compliments
