--- a/index.html
+++ b/index.html
@@ -55,25 +55,26 @@
     </style>
 </head>
 <body>
-<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="max-width: 100%; height: auto; padding-bottom: 20px; margin-top: 10px;">
+<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="width: 100%; max-width: 1200px; height: auto; margin: 0 auto 20px; display: block;">
 
 <!-- Main Header (H1 for SEO) -->
-<h1 style="margin-top: 10px;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
+<h1 style="margin-top: 10px; text-align: center;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
 
 <!-- Description (SEO-friendly text with keywords) -->
-<p style="margin-top: 10px;">Come here for random compliments and insults that will make you smile or laugh out loud! Our compliment and insult generator brings fun and joy to your day.</p>
+<p style="margin-top: 10px; text-align: center;">Come here for random compliments and insults that will make you smile or laugh out loud! Our compliment and insult generator brings fun and joy to your day.</p>
 
 <!-- Call-to-Action: Compliment Button -->
-<button onclick="getCompliment()" style="margin-top: 10px;">Get a Kiss 💋</button>
+<button onclick="getCompliment()" style="margin-top: 10px; display: block; margin-left: auto; margin-right: auto;">Get a Kiss 💋</button>
 
 <!-- Call-to-Action: Insult Button -->
-<button onclick="getInsult()" style="margin-top: 10px;">Get a Diss 🔥</button>
+<button onclick="getInsult()" style="margin-top: 10px; display: block; margin-left: auto; margin-right: auto;">Get a Diss 🔥</button>
 
 <!-- Section for displaying the response -->
-<h2 id="response" style="margin-top: 20px;"></h2>
+<h2 id="response" style="margin-top: 20px; text-align: center;"></h2>
 
 <!-- Example Image with Alt Text for SEO -->
-<img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; height:auto;">
+<img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; max-width: 1200px; height:auto; margin: 20px auto; display: block;">
+
 
 
   <script>
