--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 <body>
-<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="width: 100%; max-width: 1200px; height: auto; margin: 0 auto 20px; display: block;">
+<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="width: 100%; max-width: 800px; height: auto; margin-top: 0; display: block;">
 
 <!-- Main Header (H1 for SEO) -->
 <h1 style="margin-top: 10px; text-align: center;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
@@ -73,8 +73,7 @@
 <h2 id="response" style="margin-top: 20px; text-align: center;"></h2>
 
 <!-- Example Image with Alt Text for SEO -->
-<img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; max-width: 1200px; height:auto; margin: 20px auto; display: block;">
-
+<img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; max-width: 800px; height:auto; margin: 20px auto; display: block;">
 
 
   <script>
