--- a/index.html
+++ b/index.html
@@ -56,28 +56,41 @@
 </head>
 <body>
 <!-- Centered Header Image -->
-<img src="https://imgur.com/wD0GyOF.png" alt="Kisses and Disses" style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block;">
+<img src="https://imgur.com/wD0GyOF.png" 
+     alt="Kisses and Disses" 
+     style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block;">
 
-<!-- Main Header (H1 for SEO) -->
-<h1 style="margin-top: 10px; text-align: center;">Welcome to Kisses & Disses - Your Compliment and Insult Generator</h1>
+<!-- Main Header -->
+<h1 style="margin-top: 10px; text-align: center;">
+    Welcome to Kisses & Disses - Your Compliment and Insult Generator
+</h1>
 
-<!-- Description (SEO-friendly text with keywords) -->
-<p style="margin-top: 10px; text-align: center;">Come here for random compliments and insults that will make you smile or laugh out loud! Our compliment and insult generator brings fun and joy to your day.</p>
+<!-- Description -->
+<p style="margin-top: 10px; text-align: center;">
+    Come here for random compliments and insults that will make you smile or laugh out loud! 
+    Our compliment and insult generator brings fun and joy to your day.
+</p>
 
-<!-- Button Container for Side-by-Side Layout -->
+<!-- Button Container -->
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px;">
-    <!-- Call-to-Action: Compliment Button -->
-    <button onclick="getCompliment()" style="padding: 10px 20px; font-size: 16px;">Get a Kiss 💋</button>
+    <!-- Compliment Button -->
+    <button onclick="getCompliment()" style="padding: 10px 20px; font-size: 16px;">
+        Get a Kiss 💋
+    </button>
 
-    <!-- Call-to-Action: Insult Button -->
-    <button onclick="getInsult()" style="padding: 10px 20px; font-size: 16px;">Get a Diss 🔥</button>
+    <!-- Insult Button -->
+    <button onclick="getInsult()" style="padding: 10px 20px; font-size: 16px;">
+        Get a Diss 🔥
+    </button>
 </div>
 
-<!-- Section for displaying the response -->
+<!-- Response Section -->
 <h2 id="response" style="margin-top: 20px; text-align: center;"></h2>
 
-<!-- Example Image with Alt Text for SEO -->
-<img src="compliment-image.jpg" alt="Random Compliment Generator showing happy faces and fun things" style="margin-top: 10px; width:100%; max-width: 800px; height:auto; margin: 20px auto; display: block;">
+<!-- Example Image -->
+<img src="compliment-image.jpg" 
+     alt="Random Compliment Generator showing happy faces and fun things" 
+     style="margin-top: 10px; width:100%; max-width: 800px; height:auto; margin: 20px auto; display: block;">
 
   <script>
     // Array of compliments
