--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
      style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block;">
 
 <!-- Main Header -->
-<h1 style="margin-top: 10px; text-align: center;">
+<h1 style="margin-top: 10px; text-align: center; color: teal;">
     Welcome to Kisses & Disses - Your Compliment and Insult Generator
 </h1>
 
 <!-- Description -->
-<p style="margin-top: 10px; text-align: center;">
+<p style="margin-top: 10px; text-align: center; color: teal;">
     Come here for random compliments and insults that will make you smile or laugh out loud! 
     Our compliment and insult generator brings fun and joy to your day.
 </p>
@@ -74,23 +74,26 @@
 <!-- Button Container -->
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px;">
     <!-- Compliment Button -->
-    <button onclick="getCompliment()" style="padding: 10px 20px; font-size: 16px;">
+    <button onclick="getCompliment()" 
+            style="padding: 10px 20px; font-size: 16px; color: teal;">
         Get a Kiss 💋
     </button>
 
     <!-- Insult Button -->
-    <button onclick="getInsult()" style="padding: 10px 20px; font-size: 16px;">
+    <button onclick="getInsult()" 
+            style="padding: 10px 20px; font-size: 16px; color: teal;">
         Get a Diss 🔥
     </button>
 </div>
 
 <!-- Response Section -->
-<h2 id="response" style="margin-top: 20px; text-align: center;"></h2>
+<h2 id="response" style="margin-top: 20px; text-align: center; color: teal;"></h2>
 
 <!-- Example Image -->
 <img src="compliment-image.jpg" 
      alt="Random Compliment Generator showing happy faces and fun things" 
      style="margin-top: 10px; width:100%; max-width: 800px; height:auto; margin: 20px auto; display: block;">
+
 
   <script>
     // Array of compliments
