--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </style>
 </head>
 <body>
-<!-- Centered Header Image -->
-<img src="https://imgur.com/wD0GyOF.png" 
+<!-- Header Image -->
+<img src="https://i.imgur.com/wD0GyOF.png" 
      alt="Kisses and Disses" 
      style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block;">
 
@@ -75,25 +75,13 @@
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px;">
     <!-- Compliment Button -->
     <button onclick="getCompliment()" 
-            style="padding: 10px 20px; font-size: 16px; color: teal;">
+            style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal;">
         Get a Kiss 💋
     </button>
 
     <!-- Insult Button -->
     <button onclick="getInsult()" 
-            style="padding: 10px 20px; font-size: 16px; color: teal;">
-        Get a Diss 🔥
-    </button>
-</div>
-
-<!-- Response Section -->
-<h2 id="response" style="margin-top: 20px; text-align: center; color: teal;"></h2>
-
-<!-- Example Image -->
-<img src="compliment-image.jpg" 
-     alt="Random Compliment Generator showing happy faces and fun things" 
-     style="margin-top: 10px; width:100%; max-width: 800px; height:auto; margin: 20px auto; display: block;">
-
+            style="padding: 10px 20px; font-size: 16px
 
   <script>
     // Array of compliments
