--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </p>
 
 <!-- Button Container -->
-<div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px;">
+<div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px; margin-bottom: 50px;">
     <!-- Compliment Button -->
     <button onclick="getCompliment()" 
             style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal;">
