--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </div>
 
 <!-- Response Section -->
-<h2 id="response" style="margin-top: 20px; text-align: center; color: teal;"></h2>
+<h2 id="response" style="margin-top: 20px; margin-bottom: 150px; text-align: center; color: teal;"></h2>
 
 
   <script>
