--- a/index.html
+++ b/index.html
@@ -76,16 +76,21 @@
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px; margin-bottom: 15px;">
     <!-- Compliment Button -->
     <button onclick="getCompliment()" 
-            style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal;">
+            id="kissButton"
+            style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal; display: flex; align-items: center; gap: 5px;">
+        <img id="kissImage" src="https://i.imgur.com/sH6NF34.png" alt="Lips" style="width: 30px; height: 30px;">
         Get a Kiss 💋
     </button>
 
     <!-- Insult Button -->
     <button onclick="getInsult()" 
-            style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal;">
+            id="dissButton"
+            style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal; display: flex; align-items: center; gap: 5px;">
+        <img id="dissImage" src="https://i.imgur.com/WgJm0pb.png" alt="Tongue" style="width: 30px; height: 30px;">
         Get a Diss 🔥
     </button>
 </div>
+
 
 <!-- Response Section -->
 <h2 id="response" style="margin-top: 15px; margin-bottom: 400px; text-align: center; color: teal;"></h2>
