--- a/index.html
+++ b/index.html
@@ -194,6 +194,27 @@
     document.getElementById("kissButton").addEventListener("click", animateKiss);
     document.getElementById("dissButton").addEventListener("click", animateDiss);
 </script>
+<script>
+    function animateKiss() {
+        let img = document.getElementById("kissImage");
+        img.src = "https://i.imgur.com/YG3ShU6.png"; // Puckered lips
+        setTimeout(() => {
+            img.src = "https://i.imgur.com/sH6NF34.png"; // Reset to normal lips
+        }, 500);
+    }
+
+    function animateDiss() {
+        let img = document.getElementById("dissImage");
+        img.src = "https://i.imgur.com/RcDp1uO.png"; // Tongue sticking out
+        setTimeout(() => {
+            img.src = "https://i.imgur.com/WgJm0pb.png"; // Reset to normal mouth
+        }, 500);
+    }
+
+    document.getElementById("kissButton").addEventListener("click", animateKiss);
+    document.getElementById("dissButton").addEventListener("click", animateDiss);
+</script>
+</body>
 
 </body>
 </html>
