--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- Header Image -->
 <img src="https://i.imgur.com/wD0GyOF.png" 
      alt="Kisses and Disses" 
-     style="width: 100%; max-width: 800px; height: auto; margin: 0; display: block;">
+     style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block;">
 
 <!-- Main Header -->
 <h1 style="margin-top: 10px; text-align: center; color: teal;">
