--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 <body>
 
 <!-- Header Image -->
+<!-- Header Image -->
 <img src="https://i.imgur.com/wD0GyOF.png" 
      alt="Kisses and Disses" 
-     style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block;">
+     style="width: 100%; max-width: 800px; height: auto; margin: 0; display: block; padding: 0;">
 
 <!-- Main Header -->
 <h1 style="margin-top: 10px; text-align: center; color: teal;">
