--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
     <!-- Compliment Button -->
     <button id="kissButton" onclick="getCompliment()" 
             style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal;">
-        <img id="kissImage" src="https://i.imgur.com/sH6NF34.png" alt="Lips" 
-             style="width: 30px; vertical-align: middle;"> 
-        <span>Get a Kiss 💋</span>
+        Get a Kiss 💋
     </button>
 
     <!-- Insult Button -->
     <button id="dissButton" onclick="getInsult()" 
             style="padding: 10px 20px; font-size: 16px; background-color: white; color: teal; border: 2px solid teal;">
-        <img id="dissImage" src="https://i.imgur.com/WgJm0pb.png" alt="Mouth" 
-             style="width: 30px; vertical-align: middle;">
-        <span>Get a Diss 🔥</span>
+        Get a Diss 🔥
     </button>
 </div>
 
-<!-- Response Text -->
-<p id="response" style="font-size: 18px; font-weight: bold; color: teal;"></p>
+<!-- Response Section -->
+<h2 id="response" style="margin-top: 15px; text-align: center; color: teal;"></h2>
+
+<!-- Add Extra Space at the Bottom -->
+<div style="height: 200px;"></div>
+
 
 <script>
     // Array of compliments
