--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 
 <!-- Header Image -->
 <!-- Header Image -->
+<!-- Header Image -->
 <img src="https://i.imgur.com/wD0GyOF.png" 
      alt="Kisses and Disses" 
-     style="width: 100%; max-width: 800px; height: auto; margin: 0 auto; display: block; padding: 0;">
+     style="display: block; margin: 0 auto; width: 100%; max-width: 800px; height: auto;">
 
 <!-- Main Header -->
 <h1 style="margin-top: 10px; text-align: center; color: teal;">
