--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4QSYK4C0TD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-4QSYK4C0TD');
-</script>  
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4QSYK4C0TD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-4QSYK4C0TD');
+    </script>
 
-<!-- Title Tag: SEO Optimized -->
-<title>Random Compliment and Insult Generator | Fun Compliments & Sassy Insults</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kisses & Disses - A fun generator for compliments and insults. Enjoy random positive and funny messages.">
+    <meta name="author" content="Your Name or Website">
+    <title>Kisses & Disses</title>
+
+    <!-- Additional head elements, like linking stylesheets or fonts can go here -->
+</head>
 
 <!-- Meta Description: SEO Optimized -->
 <meta name="description" content="Get random compliments or sassy insults with our fun and interactive generator. Brighten your day with a compliment or a funny diss. Try it now!">
