--- a/index.html
+++ b/index.html
@@ -161,19 +161,24 @@
       "You have the perfect face for radio!"
     ];
 
-  // Function to get a random compliment
-function getCompliment() {
+ function getCompliment() {
     const randomCompliment = compliments[Math.floor(Math.random() * compliments.length)];
     console.log(randomCompliment); // Debugging line
-    document.getElementById("response").textContent = randomCompliment;
+    const responseElement = document.getElementById("response");
+    if (responseElement) {
+        responseElement.textContent = randomCompliment;
+    }
 }
 
-// Function to get a random insult
 function getInsult() {
     const randomInsult = insults[Math.floor(Math.random() * insults.length)];
     console.log(randomInsult); // Debugging line
-    document.getElementById("response").textContent = randomInsult;
+    const responseElement = document.getElementById("response");
+    if (responseElement) {
+        responseElement.textContent = randomInsult;
+    }
 }
+
 
 
     // Animation for Kiss button
