--- a/index.html
+++ b/index.html
@@ -161,22 +161,14 @@
       "You have the perfect face for radio!"
     ];
 
- function getCompliment() {
+function getCompliment() {
     const randomCompliment = compliments[Math.floor(Math.random() * compliments.length)];
-    console.log(randomCompliment); // Debugging line
-    const responseElement = document.getElementById("response");
-    if (responseElement) {
-        responseElement.textContent = randomCompliment;
+    document.getElementById("response").textContent = randomCompliment;
     }
-}
 
 function getInsult() {
     const randomInsult = insults[Math.floor(Math.random() * insults.length)];
-    console.log(randomInsult); // Debugging line
-    const responseElement = document.getElementById("response");
-    if (responseElement) {
-        responseElement.textContent = randomInsult;
-    }
+    document.getElementById("response").textContent = randomInsult;
 }
 
 
